# Gesture-Controlled-SM-System

./: .gitignore  README.md  requirements.txt
api/: Cargo.toml
api/src/: main.rs
firmware/python/: main.py
firmware/python/gesture_recognition/: gesture_recognition.py  led.py
firmware/python/led_logic/: led.py
firmware/python/scripts/: end.sh  start.sh
firmware/rust/: Cargo.toml
firmware/rust/src/: main.rs
mobile-app/GestureApp/: App.js  app.json  package-lock.json  package.json
models/: ml_models.py
