[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
simplelog = "0.12.1"
uuid = { version = "1.6.1", features = ["v4"] }
[target.armv7-unknown-linux-gnueabihf]